[package]
name = "close_approaches"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"
regex = "1.11.1"
